--- a/src/main/resources/static/client.html
+++ b/src/main/resources/static/client.html
@@ -1,5 +1,97 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Library-</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script type="text/javascript" src="js/generalScript.js"></script>
+  <script type="text/javascript" src="js/indexScript.js"></script>
+  <script type="text/javascript" src="js/clientScript.js"></script>
+  <script type="text/javascript" src="js/messageScript.js"></script>
+  <script type="text/javascript" src="js/libraryScript.js"></script>
+  <script type="text/javascript" src="js/categoryScript.js"></script>
+  <script type="text/javascript" src="js/reservationScript.js"></script>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-thin-straight/css/uicons-thin-straight.css'>
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/form.css">
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css'>
+
+</head>
+<body>
+<header>
+  <!-- Intro settings -->
+  <style>
+    /* Default height for small devices */
+    #intro-example {
+      height: 400px;
+    }
+
+    /* Height for devices larger than 992px */
+    @media (min-width: 992px) {
+      #intro-example {
+        height: 600px;
+      }
+    }
+  </style>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container-fluid">
+      <button
+              class="navbar-toggler"
+              type="button"
+              data-mdb-toggle="collapse"
+              data-mdb-target="#navbarExample01"
+              aria-controls="navbarExample01"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarExample01">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" aria-current="page" href="index.html"><i class="fi fi-rr-home"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="category.html"><i class="fi fi-rr-grid"></i> Categorías </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="client.html"><i class="fi fi-ts-book-open-reader"></i> Clientes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="library.html"><i class="fi fi-ts-book-bookmark"></i> Cubículos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="reservation.html"><i class="fi fi-rr-calendar-clock"></i> Reservaciones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="message.html"><i class="fi fi-rs-paper-plane"></i> Mensajes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="report.html"><i class="fi fi-rs-megaphone"></i> Reportes</a>
+
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="score.html"><i class="fi fi-rr-users-alt"></i> Score</a>
+
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Navbar -->
+
+
+  <!-- Background image -->
+</header>
 <div id="formRegister">
-  <h1 class="title">CLIENTES</h1>
+  <h1 class="title" style="font-family: 'Cooper Black'">CLIENTES</h1>
   <div class="fieldRow hidden">
     <div class="label">Id:</div>
     <div class="field">
@@ -43,3 +135,16 @@
 
   </div>
 </div>
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+</body>
+</html>
+
+
+
