--- a/src/main/resources/static/report.html
+++ b/src/main/resources/static/report.html
@@ -21,23 +21,13 @@
   <link rel="stylesheet" href="css/form.css">
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css'>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script type="text/javascript" src="js/reportScript"></script>
+
 </head>
 <body>
 <header>
-  <!-- Intro settings -->
-  <style>
-    /* Default height for small devices */
-    #intro-example {
-      height: 400px;
-    }
 
-    /* Height for devices larger than 992px */
-    @media (min-width: 992px) {
-      #intro-example {
-        height: 600px;
-      }
-    }
-  </style>
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
@@ -86,70 +76,23 @@
     </div>
   </nav>
   <!-- Navbar -->
+  <h1 style="font-family: 'Cooper Black' " >         Reportes Reservaciones</h1>
 
+  <button class="buttom" onclick="traerReporteStatus()">Status </button>
+  <div id="resultadoStatus"></div>
+
+  <input type="date" id="RstarDate" placeholder="Descripcion">
+  <input type="date" id="RdevolutionDate" placeholder="Descripcion">
+  <button class="button" onclick="traerReporteDate()" >Reporte por fecha </button>
+
+
+
+  <button class="buttom" onclick="traerReporteClientes()"> Cantidad reservas</button>
+  <div id="resultadoDate"></div>
+  <div id="resultadoClientes"></div>
 
   <!-- Background image -->
 </header>
-<div>
-  <div id="formRegister">
-    <h1 class="title" style="font-family: 'Cooper Black'">CUBÍCULOS</h1>
-    <div class="fieldRow hidden">
-      <div class="label">Id:</div>
-      <div class="field">
-        <input type="number" id="idLibrary">
-      </div>
-    </div>
-
-    <div class="fieldRow">
-      <div class="label">Objetivo:</div>
-      <div class="field">
-        <input type="text" id="targetLibrary">
-      </div>
-    </div>
-
-    <div class="fieldRow">
-      <div class="label">Capacidad:</div>
-      <div class="field">
-        <input type="number" id="capacityLibrary">
-      </div>
-    </div>
-
-    <div class="fieldRow">
-      <div class="label">Categoria:</div>
-      <div class="field">
-        <!-- <input type="number" id="categoryIdLibrary"> -->
-        <select class="" name="" id="categoryIdLibrary">
-
-        </select>
-      </div>
-    </div>
-
-    <div class="fieldRow">
-      <div class="label">Nombre:</div>
-      <div class="field">
-        <input type="text" id="nameLibrary">
-      </div>
-    </div>
-
-    <div class="fieldRow">
-      <div class="label">Descripción:</div>
-      <div class="field">
-        <input type="text" id="descriptionLibrary">
-      </div>
-    </div>
-
-    <div><button class="buttom" onclick="saveLibrary()">Guardar</button></div>
-     <div> <button class="buttom" onclick="getLibraries()">Listar</button></div>
-      <div><button class="buttom hidden" onclick="updateLibrary()">Actualizar</button></div>
-    </div>
-
-
-    <div id="listLibraries">
-
-    </div>
-  </div>
-</div>
-
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -157,5 +100,5 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-</body>
 </html>
+
